dist/1.0/bin/sample/retrieveUnpackaged/objects/AttributeValue__c.object
<CustomObject>
    <description>Defines Values of Picklist Attributes and Columns of Grid Attributes</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>For Grids: only Active Attribute Values will be used to define column of a Grid.
For Picklists/Multiselects: only Active Attribute Values will be available for selection in the Picklist/Multiselect</description>
        <inlineHelpText>For Grids: only Active Attribute Values will be used to define column of a Grid.
For Picklists/Multiselects: only Active Attribute Values will be available for selection in the Picklist/Multiselect</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Relation to Attribute definition</description>
        <inlineHelpText>Relation to Attribute definition</inlineHelpText>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>R00N80000002okADEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BCT_Value__c</fullName>
        <description>Value, that should be sent within Caluclation to BCT for this Attribute Value</description>
        <inlineHelpText>Value, that should be sent within Caluclation to BCT for this Attribute Value</inlineHelpText>
        <label>BCT Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_Field_Type__c</fullName>
        <description>For Grids only! Type of data stored in Grid&apos;s column.</description>
        <inlineHelpText>For Grids only! Type of data stored in Grid&apos;s column.</inlineHelpText>
        <label>Grid Column Type</label>
        <picklist>
            <picklistValues>
                <fullName>EditBox</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SearchPicklist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Grid&apos;s column should be hidden</description>
        <inlineHelpText>Indicates if Grid&apos;s column should be hidden</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Label displayed in Product Configurator</description>
        <inlineHelpText>Label displayed in Product Configurator</inlineHelpText>
        <label>Label</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Product Catalog language for this definition.</description>
        <inlineHelpText>Product Catalog language for this definition.</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>SVK</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_Values__c</fullName>
        <description>Values from Master Picklist that allow showing this particular Attribute Value in Product Configurator. This field is used only when Master Picklist is assigned to the Picklist Attribute.</description>
        <inlineHelpText>Values from Master Picklist that allow showing this particular Attribute Value in Product Configurator. This field is used only when Master Picklist is assigned to the Picklist Attribute.</inlineHelpText>
        <label>Master Values</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Defines a sequence order in which this value will be sorted in Picklist/Grid in Product Configurator.</description>
        <inlineHelpText>Defines a sequence order in which this value will be sorted in Picklist/Grid in Product Configurator.</inlineHelpText>
        <label>Sequence Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PicklistSourceAttribute__c</fullName>
        <description>For Grids only: Defines an Attribute that holds Picklist values for this column.</description>
        <inlineHelpText>For Grids only: Defines an Attribute that holds Picklist values for this column.</inlineHelpText>
        <label>Picklist Source Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Attribute Values (Picklist Source Attribute)</relationshipLabel>
        <relationshipName>Attribute_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this definiton matches a definition in Billing system.</description>
        <inlineHelpText>Indicates if this definiton matches a definition in Billing system.</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked then this grid column will always be verified to have unique values.</description>
        <inlineHelpText>When this field is checked then this grid column will always be verified to have unique values.</inlineHelpText>
        <label>Unique</label>
        <type>Checkbox</type>
    </fields>
    <label>Attribute Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Order__c</columns>
        <columns>Grid_Field_Type__c</columns>
        <columns>PicklistSourceAttribute__c</columns>
        <columns>Language__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>